Prevent image overflow

--- a/css/index.css
+++ b/css/index.css
@@ -27,6 +27,7 @@ p:last-child {
 p,
 .tmpl-post li,
 img {
+  width: 100%;
   max-width: 37.5em; /* 600px /16 */
 }
 p,
